production-manifest/apps/blog/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-production
  labels:
    app.kubernetes.io/name: blog-production
    app.kubernetes.io/part-of: blog
