production-manifest/apps/blog/07-blog-back-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-back-nginx
  namespace: blog-production
  labels:
    app.kubernetes.io/name: blog-back-nginx
    app.kubernetes.io/part-of: blog-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: blog-back-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blog-back-nginx
        app.kubernetes.io/part-of: blog-back
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload-role
                    operator: In
                    values:
                      - app
      imagePullSecrets:
        - name: kuberneteshub
      containers:
        - name: nginx
          image: kareemdev2/blog-back-nginx:prod-85
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 125m
              memory: 128Mi
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
            - name: assets
              mountPath: /app/public/build
            - name: uploads
              mountPath: /app/public/uploads/images
      volumes:
        - name: nginx-config
          configMap:
            name: blog-back-nginx-config
        - name: assets
          persistentVolumeClaim:
            claimName: blog-back-assets-nfs
        - name: uploads
          persistentVolumeClaim:
            claimName: blog-back-uploads-nfs
