production-manifest/apps/blog/08-blog-back-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-back-nginx
  namespace: blog-production
  labels:
    app.kubernetes.io/name: blog-back-nginx
    app.kubernetes.io/part-of: blog-back
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: blog-back-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
