production-manifest/apps/blog/16-blog-back-nginx-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blog-back-nginx-network-policy
  namespace: blog-production
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: blog-back-nginx

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: rke2-ingress-nginx
              app.kubernetes.io/component: controller
      ports:
        - protocol: TCP
          port: 80

  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: blog-back-fpm
      ports:
        - protocol: TCP
          port: 9000

    - to:
        - ipBlock:
            cidr: 10.43.0.10/32
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
